# CoreNN

./: .gitignore  Cargo.toml  README.md  explore-vamana.html  format  requirements.txt  version  visualizer.html
.github/workflows/: benchmark.yml  node.yml  python.yml
analysis/: Cargo.toml  requirements.txt
analysis/src/: agg.py  analyze.rs  build_hnsw.py  build_hnsw_sharded.py  eval_hnsw.py  lib.rs  main.rs  plot.py  plot_full.py  plot_hnsw.py  plot_kmeans.py  randinit.rs  util.py
calc-dists/: main.py
calc-nn/: main.py
calc-nn-gpu/: main.py
ci/: Cargo.toml
ci/src/: main.rs
corenn/: Cargo.toml
corenn-kernels/: Cargo.toml
corenn-kernels/src/: lib.rs
corenn-node/: Cargo.toml  package.json  tsconfig.json
corenn-node/plat-pkg/: README.md  package.json.gen.js
corenn-node/src/: index.ts  lib.rs
corenn-py/: Cargo.toml
corenn-py/src/: lib.rs
corenn/src/: lib.rs  main.rs
corenn/src/cmd/: eval.rs  export_vectors.rs  migrate_hnsw.rs  mod.rs  serve.rs
dataset/: README.md
docs/: GRAPH_ANN_RESEARCH.md  HNSW_DEEP_ANALYSIS.md  INTERNAL_ENGINEERING.md  OPTIMIZATION_SCRATCHPAD.md  PERFORMANCE_OPTIMIZATION_MASTER.md  VAMANA_RNG_ANALYSIS.md  dataset_pipeline.md  performance_master_plan.md  performance_scratchpad.md
eval/: Cargo.toml
eval/src/: main.rs
export-vectors/: Cargo.toml
export-vectors/src/: main.rs
fix-nan/: Cargo.toml  README.md
fix-nan/src/: main.rs
hnsw-sharded-to-roxanne/: Cargo.toml
hnsw-sharded-to-roxanne/src/: main.rs
hnsw-to-roxanne/: Cargo.toml
hnsw-to-roxanne/src/: hnsw.rs  main.rs
hnswlib-rs/: Cargo.toml  README.md
hnswlib-rs/src/: bruteforce.rs  error.rs  hnsw.rs  id.rs  legacy.rs  lib.rs  metric.rs  scalar.rs  space.rs  stop_condition.rs  vector.rs  vectors.rs  view.rs  visited.rs
libcorenn/: Cargo.toml
libcorenn/benches/: distance.rs  query.rs
libcorenn/src/: cache.rs  cfg.rs  compaction.rs  lib.rs  vec.rs
libcorenn/src/compressor/: mod.rs  pq.rs  scalar.rs  trunc.rs
libcorenn/src/metric/: cosine.rs  l2.rs  mod.rs  ops.rs
libcorenn/src/store/: in_memory.rs  mod.rs  rocksdb.rs  schema.rs
libcorenn/tests/: integration_test.rs  pq_adc_test.rs
libroxanne/: Cargo.toml
libroxanne/src/: beamqueue.rs  bf.rs  blob.rs  cache.rs  cfg.rs  common.rs  compaction.rs  db.rs  hnsw.rs  in_memory.rs  lib.rs  main.rs  pq.rs  queue.rs  search.rs  tests.rs  updater.rs  util.rs  vamana.rs
libroxanne/src/compressor/: mod.rs  pq.rs  trunc.rs
libroxanne/src/metric/: cosine.rs  l2.rs  mod.rs
libroxanne/src/tests/: cache.rs  mod.rs  nodes.rs
pqify/: Cargo.toml
pqify/src/: main.rs
roxanne/: Cargo.toml
roxanne-accel/: greedy_search.py  greedy_search_test.py  index.py  main.py  microbench.py  randinit.py  robust_prune_test.py  util.py
roxanne-py/: Cargo.toml
roxanne-py/src/: lib.rs
roxanne/src/: lib.rs  main.rs
roxanne/src/cmd/: eval.rs  export_vectors.rs  migrate_hnsw.rs  migrate_sharded_hnsw.rs  mod.rs  serve.rs
scripts/datasets/: deep1b.sh  sift1m.sh
search/: Cargo.toml
search/src/: lib.rs
src/: vamana.rs
tools/: build_vamana_accel.py  calc_dists.py  calc_kmeans_gpu.py  calc_nn.py  convert_texmex.py  sample_vecs.py
vamana-accel/: example_2d.py  fastann.py  greedy_search.py  greedy_search_test.py  index.py  index_test.py  main.py  robust_prune.py  robust_prune_test.py  util.py
visualizer/: Cargo.toml  package.json  tsconfig.json
visualizer/src/: common.ts  index.css  index.html  main.rs
visualizer/src/component/: App.css  App.tsx  Graph.css  Graph.tsx
