[package]
name = "roxanne-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
bytemuck = { version = "1.19.0", features = ["nightly_float"] }
byteorder = "1.5.0"
clap = { version = "4.5.19", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["serde"] }
half = { version = "2.4.1", features = ["bytemuck", "num-traits", "serde"] }
hnswlib-rs = { path = "../hnswlib-rs" }
indicatif = "0.17.9"
itertools = "0.13.0"
libroxanne = { path = "../libroxanne" }
ndarray = "0.15"
num_cpus = "1.16.0"
ordered-float = "4.4.0"
rand = "0.8.5"
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
