[package]
name = "ci"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libcorenn = { path = "../libcorenn" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
half = "2.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
