[package]
name = "corenn-kernels"
description = "CoreNN vector math kernels (SIMD distance/dot)"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/corenn"
repository = "https://github.com/wilsonzlin/corenn.git"
version = "0.1.0"
edition = "2021"

[dependencies]
half = { version = "2.4.1", features = ["bytemuck"] }