[package]
name = "corenn"
description = "Billion-scale vector database"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/corenn"
repository = "https://github.com/wilsonzlin/corenn.git"
version = "0.3.1"
edition = "2021"

[dependencies]
ahash = "0.8.11"
axum = "0.7.9"
bitcode = "0.6.3"
bytemuck = "1.20.0"
clap = { version = "4.5.21", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
half = "2.4.1"
hnswlib-rs = { version = "0.9.0", path = "../hnswlib-rs" }
indicatif = "0.17.9"
itertools = "0.13.0"
tikv-jemallocator = { version = "0.6.0", features = ["unprefixed_malloc_on_supported_platforms"] }
libcorenn = { version = "0.3.1", path = "../libcorenn" }
ndarray = { version = "0.15", features = ["blas"] } # libcorenn uses 0.15.
num-traits = "0.2.19"
parking_lot = "0.12.3"
rayon = "1.10.0"
rocksdb = "0.22.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.8", features = ["accelerate"] }

[target.'cfg(target_os = "windows")'.dependencies]
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }

[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }
