[package]
name = "roxanne-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }
indicatif = "0.17.8"
libroxanne = { version = "0.2.0", path = "../libroxanne" }
libroxanne-search = { version = "0.2.0", path = "../search" }
ndarray-linalg = { version = "0.15.0", features = ["openblas"] }
rayon = "1.10.0"
