[package]
name = "hnsw-to-roxanne"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
hnswlib-rs = { path = "../hnswlib-rs" }
indicatif = "0.17.8"
itertools = "0.13.0"
libroxanne = { path = "../libroxanne" }
lmdb = "0.8.0"
ndarray = "0.15"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
rmp-serde = "1.3.0"
