[package]
name = "hnsw-to-roxanne"
version = "0.1.0"
edition = "2021"

[dependencies]
hnswlib-rs = { path = "../hnswlib-rs" }
clap = { version = "4.5.20", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
libroxanne = { path = "../libroxanne" }
libroxanne-search = { version = "0.2.0", path = "../search" }
indicatif = "0.17.8"
itertools = "0.13.0"
rayon = "1.10.0"
serde = "1.0.214"
