[package]
name = "hnswlib-rs"
description = "Parse and query HNSW indices"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/corenn"
repository = "https://github.com/wilsonzlin/corenn.git"
version = "0.5.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
bytemuck = "1.20.0"
ordered-float = "4.5.0"
