[package]
name = "hnswlib-rs"
description = "Pure-Rust port of hnswlib (HNSW approximate nearest neighbors)"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/corenn"
repository = "https://github.com/wilsonzlin/corenn.git"
version = "0.10.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
arc-swap = "1.7.1"
bincode = "1.3.3"
bytemuck = "1.20.0"
corenn-kernels = { version = "0.1.1", path = "../corenn-kernels" }
dashmap = "6.1.0"
half = { version = "2.7.1", features = ["bytemuck"] }
off64 = { version = "0.9.0", default-features = false }
ordered-float = "4.5.0"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.9"
tracing = "0.1.41"

[dev-dependencies]
approx = "0.5.1"
proptest = "1.5.0"
rand = "0.8.5"
tempfile = "3.14.0"
