[package]
name = "libroxanne"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
itertools = "0.13.0"
linfa = "0.7.0"
linfa-clustering = { version = "0.7.0", features = ["serde"] }
linfa-nn = "0.7.0"
ndarray = "0.15" # linfa uses 0.15.
ndarray-linalg = "0.15.0" # linfa uses 0.15.
ordered-float = "4.3.0"
parking_lot = "0.12.3"
rand = "0.8"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
ndarray-rand = "0.14.0" # Version 0.15 depends on ndarray 0.16 which we cannot use (see above).
