[package]
name = "libroxanne"
description = "Library for RoxanneDB"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/roxanne"
repository = "https://github.com/wilsonzlin/roxanne.git"
version = "0.2.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
arbitrary-lock = "0.1.1"
bitcode = "0.6.3"
bytemuck = { version = "1.19.0", features = ["nightly_float"] }
byteorder = "1.5.0"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
data-encoding = "2.6.0"
hnswlib-rs = { path = "../hnswlib-rs" }
itertools = "0.13.0"
linfa = "0.7.0"
linfa-clustering = { version = "0.7.0", features = ["serde"] }
linfa-nn = "0.7.0"
ndarray = "0.15" # linfa uses 0.15.
ndarray-linalg = "0.15.0" # linfa uses 0.15.
num_cpus = "1.16.0"
ordered-float = "4.3.0"
parking_lot = "0.12.3"
rand = "0.8"
rayon = "1.10.0"
rmp-serde = "1.3.0"
rocksdb = "0.22.0"
serde = { version = "1.0.210", features = ["derive", "rc"] }
strum = "0.26.3"
strum_macros = "0.26.4"
toml = "0.8.19"

[dev-dependencies]
ndarray-rand = "0.14.0" # Version 0.15 depends on ndarray 0.16 which we cannot use (see above).
