[package]
name = "roxanne-pqify"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
indicatif = "0.17.8"
itertools = "0.13.0"
libroxanne = { path = "../libroxanne" }
libroxanne-search = { version = "0.2.0", path = "../search" }
ndarray = "0.15"
rand = "0.8.5"
rayon = "1.10.0"
rocksdb = "0.22.0"
