[package]
name = "roxanne_py"
version = "0.1.0"
edition = "2021"

[dependencies]
half = "2.4.1"
itertools = "0.13.0"
libroxanne = { version = "0.2.0", path = "../libroxanne" }
ndarray = "0.15.0" # libroxanne requires 0.15.0.
numpy = { version = "0.23", features = ["half"] }
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
