[package]
name = "roxanne"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
axum = "0.7.9"
bytemuck = "1.20.0"
clap = { version = "4.5.21", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
half = "2.4.1"
hnswlib-rs = { version = "0.2.0", path = "../hnswlib-rs" }
indicatif = "0.17.9"
itertools = "0.13.0"
libroxanne = { version = "0.2.0", path = "../libroxanne" }
ndarray = "0.15" # libroxanne uses 0.15.
ndarray-linalg = { version = "0.15.0", features = ["openblas"] } # libroxanne uses 0.15.
num-traits = "0.2.19"
parking_lot = "0.12.3"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
